--- a/front/src/Components/Navbar/Navbar.css
+++ b/front/src/Components/Navbar/Navbar.css
@@ -103,7 +103,21 @@
 .nav-logo img {
   width: 90px;
 }
-
+.btnlogin{
+  width: 120px;
+  height: 35px;
+  border: 1px solid gray;
+  background: transparent;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 7px;
+  border-radius: 8px;
+}
+.btnlogin:hover{
+  border: 1px solid #ffdd40;
+ 
+}
 @media screen and (max-width: 960px) {
   .nav-menu {
     display: flex;
