--- a/front/src/Components/Categories/Categories.css
+++ b/front/src/Components/Categories/Categories.css
@@ -14,19 +14,24 @@
 }
 .cat-plus {
   width: 250px;
-  height: 35px;
+  height: 38px;
   margin-top: 30px;
-  border: 1px solid rgba(128, 128, 128, 0.384);
-  background: rgba(128, 128, 128, 0.178);
+  border: none;
+  background: linear-gradient(to right, #5353539f, #b67332);
   font-size: 15px;
+  font-weight: 600;
   border-radius: 15px;
-  color: black;
+  color: white;
   cursor: pointer;
 }
 .cat-plus:hover {
-  background: #1f5156be;
+  background: linear-gradient(to right, #000, #7e4e1f);
   color: white;
 }
 .categorie {
   text-align: center;
+}
+.arrow-ic {
+  margin-bottom: -3px;
+  margin-left: 5px;
 }
