--- a/front/src/Components/Infos/Info.css
+++ b/front/src/Components/Infos/Info.css
@@ -1,9 +1,9 @@
-.info {
+.infos {
   display: flex;
   justify-content: space-between;
   margin: 40px 90px;
 }
-.info p {
+.infos p {
   width: 300px;
   text-align: center;
   font-size: 14px;
@@ -14,12 +14,6 @@ h1 {
   margin-top: 30px;
   color: black;
 }
-
-.x {
-  background: red;
-}
-
-/*--------------------------------------------------------------*/
 
 * {
   box-sizing: border-box;
