--- a/front/src/Components/Navbar/Navbar.css
+++ b/front/src/Components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
 }
 
 .navbar {
-  background-color: #1f5156;
+  background-color: #000;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -13,8 +13,26 @@
   position: sticky;
   top: 0;
   z-index: 20;
+  font-family: "Playfair Display", serif;
 }
-
+.nav-logo img {
+  width: 50px;
+  height: 70px;
+  margin-top: 15px;
+  margin-left: 80px;
+}
+.nav-logo {
+  color: #b67332;
+  align-items: center;
+  margin-left: 20px;
+  margin-bottom: 6px;
+  cursor: pointer;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 32px;
+  flex-grow: 1;
+  font-family: "Playfair Display", serif;
+}
 .nav-container {
   display: flex;
   justify-content: center;
@@ -33,24 +51,14 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-.nav-logo {
-  color: #f5b921;
-  align-items: center;
-  margin-left: 20px;
-  margin-bottom: 10px;
-  cursor: pointer;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 32px;
-  flex-grow: 1;
-}
-
 .nav-menu {
   display: flex;
   list-style: none;
   text-align: center;
   margin-right: 250px;
   margin-top: 5px;
+  gap: 25px;
+  font-size: 22px;
 }
 .nav-menu-right {
   display: flex;
@@ -65,6 +73,9 @@
   padding: 0.5rem 1rem;
   height: 100%;
   border-bottom: 3px solid transparent;
+}
+.nav-links:hover {
+  color: #ffffff;
 }
 .fa-code {
   margin-left: 1rem;
@@ -89,12 +100,12 @@
 
 .nav-item:hover:after {
   width: 100%;
-  background: #ffdd40;
+  background: #b67332;
 }
 
 .nav-item.active {
-  color: #ffdd40;
-  border: 1px solid #ffdd40;
+  color: #b67332;
+  border: 1px solid #b67332;
 }
 
 .nav-icon {
@@ -103,20 +114,19 @@
 .nav-logo img {
   width: 90px;
 }
-.btnlogin{
-  width: 120px;
+.btnlogin {
+  width: 170px;
   height: 35px;
-  border: 1px solid gray;
+  border: 1px solid #fff;
   background: transparent;
   color: white;
-  font-size: 18px;
+  font-size: 16px;
   cursor: pointer;
   margin-top: 7px;
   border-radius: 8px;
 }
-.btnlogin:hover{
-  border: 1px solid #ffdd40;
- 
+.btnlogin:hover {
+  border: 1px solid #b67332;
 }
 @media screen and (max-width: 960px) {
   .nav-menu {
@@ -132,7 +142,7 @@
   }
 
   .nav-menu.active {
-    background: #1f5156;
+    background: #000000;
     left: 0px;
     opacity: 1;
     transition: all 0.5s ease;
@@ -156,6 +166,6 @@
     transform: translate(-100%, 60%);
     font-size: 1.8rem;
     cursor: pointer;
-    color: #ffdd40;
+    color: #40ffd6;
   }
 }
