--- a/front/src/Components/ProCard/Procard.css
+++ b/front/src/Components/ProCard/Procard.css
@@ -6,12 +6,13 @@
   border: 1px solid rgba(0, 0, 0, 0.289);
   margin-top: 20px;
   border-radius: 25px;
+  background: white;
 }
 .description h2 {
   text-transform: uppercase;
   font-weight: bold;
   margin: 15px;
-  font-size: 18px;
+  font-size: 15px;
 }
 .description p {
   margin: 15px;
@@ -20,13 +21,16 @@
 .info {
   padding: 20px;
   margin: 0;
+  display: flex;
+  justify-content: space-between;
 }
 .info img {
-  width: 12%;
+  width: 11%;
   margin-top: 20px;
+  margin-right: -50px;
 }
 .details p {
-  font-size: 15px;
+  font-size: 14px;
   text-align: left;
   margin-left: 65px;
   text-transform: uppercase;
@@ -36,28 +40,39 @@
 .details h4 {
   margin-left: 65px;
   color: #00adbd;
-  font-size: 22px;
+  font-size: 20px;
+  cursor: pointer;
+  font-family: "Playfair Display", serif;
+}
+a {
+  text-decoration: none;
 }
 .details h3 {
   margin-left: 65px;
   color: #000000;
-  font-size: 18px;
+  font-size: 16px;
 }
 .details {
   margin-top: 25px;
-  margin-left: -20px;
+  margin-right: 200px;
+  line-height: 30px;
 }
 .info button {
   width: 250px;
   height: 45px;
-  margin: 50px 40px;
-  background: linear-gradient(to right, #4d4d4d, #1f9aa5);
+  margin-top: 30px;
+  background: linear-gradient(to right, #5353539f, #b67332);
   color: white;
   border: none;
   border-radius: 20px;
   cursor: pointer;
 }
 .info button:hover {
-  background: linear-gradient(to left, #8f7a1e, #3f3e3e);
-  border: 1px solid yellow;
+  background: linear-gradient(to right, #000, #7e4e1f);
+}
+.details p:hover {
+  color: red;
+}
+.details h4:hover {
+  color: #ab41f1;
 }
