--- a/front/src/Components/Search/Search.css
+++ b/front/src/Components/Search/Search.css
@@ -20,10 +20,16 @@
 }
 
 .search button {
-  width: 150px;
-  height: 35px;
-  background: #1f5156e5;
+  width: 170px;
+  height: 38px;
+  background: #000;
   margin-left: 80px;
+  border: none;
   color: white;
+  border-radius: 15px;
   cursor: pointer;
+}
+.search button:hover {
+  background: linear-gradient(to right, #818181, #b67332);
+  border: 1px solid #b67332;
 }
