--- a/front/src/Components/Slider/Slider.css
+++ b/front/src/Components/Slider/Slider.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Playfair Display", serif;
 }
 
 .each-slide div {
@@ -14,7 +15,7 @@
 }
 .desc-proconnect h1 {
   font-size: 58px;
-  color: #f5b921;
+  color: #b67332;
   margin-top: 40px;
   text-decoration: none;
 }
