--- a/front/src/pages/LoginAndRegister/Loginandregister.css
+++ b/front/src/pages/LoginAndRegister/Loginandregister.css
@@ -1,107 +1,108 @@
 .loginsignup {
-    width: 100%;
-    height: 80vh;
-  
-  }
-  .loginsignup-container {
-    width: 580px;
-    height: 650px;
-    margin: auto;
-    padding: 40px 60px;
-  }
+  width: 100%;
+  height: 80vh;
+}
+.loginsignup-container {
+  width: 580px;
+  height: 650px;
+  margin: auto;
+  padding: 40px 60px;
+}
+.loginsignup-container h1 {
+  margin: 20px 0px;
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #000;
+}
+.loginsignup-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-top: 30px;
+}
+.loginsignup-fields input {
+  height: 72px;
+  width: 100%;
+  padding-left: 20px;
+  border: 1px solid #c9c9c9;
+  outline: none;
+  color: #5c5c5c;
+  font-size: 18px;
+  border-radius: 40px;
+}
+.loginsignup-container button {
+  width: 460px;
+  height: 72px;
+  color: white;
+  background: linear-gradient(to right, #5353539f, #b67332);
+  margin-top: 30px;
+  border: none;
+  border-radius: 40px;
+  font-size: 24px;
+  font-weight: 500;
+  cursor: pointer;
+}
+.loginsignup-container button:hover {
+  background: linear-gradient(to right, #000, #7e4e1f);
+}
+.loginsignup-login {
+  margin-top: 20px;
+  color: #5c5c5c;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.loginsignup-login span {
+  color: #d61414;
+  font-weight: 600;
+}
+.loginsignup-agree {
+  display: flex;
+  align-items: center;
+  margin-top: 25px;
+  gap: 20px;
+  color: #5c5c5c;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.loginsignup-container span {
+  cursor: pointer;
+}
+
+@media (max-width: 800px) {
   .loginsignup-container h1 {
-    margin: 20px 0px;
-    font-size: 50px;
-    text-align: center;
-    margin-bottom: 20px;
-    color: #1f5156;
+    font-size: 40px;
   }
   .loginsignup-fields {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    margin-top: 30px;
+    margin-top: 20px;
   }
   .loginsignup-fields input {
-    height: 72px;
-    width: 100%;
-    padding-left: 20px;
-    border: 1px solid #c9c9c9;
-    outline: none;
-    color: #5c5c5c;
-    font-size: 18px;
-    border-radius: 40px;
+    height: 50px;
   }
   .loginsignup-container button {
-    width: 460px;
-    height: 72px;
-    color: white;
-    background: #1f5156;
-    margin-top: 30px;
-    border: none;
-    border-radius: 40px;
-    font-size: 24px;
-    font-weight: 500;
-    cursor: pointer;
+    height: 50px;
+    font-size: 16px;
   }
-  .loginsignup-login {
+}
+
+@media (max-width: 560px) {
+  .loginsignup-container h1 {
+    font-size: 30px;
+    margin-right: 80px;
+  }
+  .loginsignup-fields {
     margin-top: 20px;
-    color: #5c5c5c;
-    font-size: 18px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    font-family: Arial, Helvetica, sans-serif;
   }
-  .loginsignup-login span {
-    color: #d61414;
-    font-weight: 600;
+  .loginsignup-fields input {
+    width: 80%;
   }
-  .loginsignup-agree {
-    display: flex;
-    align-items: center;
-    margin-top: 25px;
-    gap: 20px;
-    color: #5c5c5c;
-    font-size: 18px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    font-family: Arial, Helvetica, sans-serif;
+  .loginsignup-container button {
+    height: 50px;
+    width: 80%;
+    font-size: 16px;
   }
-  .loginsignup-container span {
-    cursor: pointer;
-  }
-  
-  
-  @media (max-width: 800px) {
-    .loginsignup-container h1 {
-      font-size: 40px;
-    }
-    .loginsignup-fields {
-      margin-top: 20px;
-    }
-    .loginsignup-fields input {
-      height: 50px;
-    }
-    .loginsignup-container button {
-      height: 50px;
-      font-size: 16px;
-    }
-  }
-    
-  @media (max-width: 560px) {
-    .loginsignup-container h1 {
-      font-size: 30px;
-      margin-right: 80px;
-    }
-    .loginsignup-fields {
-      margin-top: 20px;
-    }
-    .loginsignup-fields input {
-      width: 80%;
-    }
-    .loginsignup-container button {
-      height: 50px;
-      width: 80%;
-      font-size: 16px;
-    }
-  }
+}
