--- a/front/src/Components/Rendezvous/Rendezvous.css
+++ b/front/src/Components/Rendezvous/Rendezvous.css
@@ -1,3 +1,29 @@
 .profil-content {
   display: flex;
 }
+table {
+  width: 140vh;
+  border-collapse: collapse;
+  margin: 20px;
+}
+
+th,
+td {
+  padding: 15px 15px;
+  text-align: center;
+  border-bottom: 1px solid #ffffff8a;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+th {
+  background-color: #b67332;
+  color: white;
+}
+
+tr:hover {
+  background-color: #f5f5f5;
+}
+
+.removebtn:hover {
+  cursor: pointer;
+}
