--- a/front/src/Components/Rendezvous/Rendezvous.css
+++ b/front/src/Components/Rendezvous/Rendezvous.css
@@ -2,9 +2,10 @@
   display: flex;
 }
 table {
-  width: 140vh;
+  width: 158vh;
   border-collapse: collapse;
-  margin: 20px;
+  margin: 3px 5px;
+  font-weight: 600;
 }
 
 th,
@@ -16,7 +17,7 @@ td {
 }
 
 th {
-  background-color: #b67332;
+  background: #303030;
   color: white;
 }
 
