--- a/front/src/pages/Admin/SidebarAdmin/Sidebaradmin.css
+++ b/front/src/pages/Admin/SidebarAdmin/Sidebaradmin.css
@@ -6,7 +6,7 @@
   width: 100%;
   max-width: 350px;
   height: 89.5vh;
-  background: rgba(255, 255, 255, 0.644);
+  background: white;
   padding: 25px;
 }
 .sidebar-item p {
