--- a/front/src/Components/Stats/Stats.css
+++ b/front/src/Components/Stats/Stats.css
@@ -1,7 +1,11 @@
 .stats {
-  width: 100%;
+  width: 90%;
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 100px;
+  margin-top: 100px;
+  margin-bottom: 100px;
   padding: 5px;
-  margin: 100px 80px;
+  margin-left: 120px;
 }
