--- a/front/src/pages/AllCategories/Allcategories.css
+++ b/front/src/pages/AllCategories/Allcategories.css
@@ -9,9 +9,10 @@
   align-items: center;
 }
 .all-top-card {
+  height: 190px;
   padding: 10px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 20px;
+  margin-bottom: 30px;
   margin-left: 40px;
   flex-basis: 20%;
   border: 1px solid #1f5156;
@@ -31,4 +32,6 @@ h1 {
 }
 .all-top-card-text h2 {
   color: #1f5156;
+  font-size: 30px;
+  margin-top: 10px;
 }
