--- a/front/src/pages/Login/Login.css
+++ b/front/src/pages/Login/Login.css
@@ -1,5 +1,7 @@
 .login-container {
   padding: 24px;
+  height: 679px;
+  background: linear-gradient(to left, black, rgba(0, 0, 0, 0.515));
 }
 
 .login-content {
@@ -31,7 +33,7 @@
   padding: 5px;
 }
 .form-header h1 {
-  color: #007bff;
+  color: #b67432d3;
 }
 
 .login-input {
@@ -52,7 +54,7 @@
 
 .remember-me {
   display: flex;
-  color: #555;
+  color: #fff;
   cursor: pointer;
   margin-left: 5px;
 }
@@ -61,9 +63,12 @@
 }
 
 .forgot-password {
-  color: #007bff;
+  color: #fff;
   text-decoration: none;
   cursor: pointer;
+}
+.forgot-password:hover {
+  color: #b45e08;
 }
 
 .submit-button {
@@ -72,7 +77,7 @@
 
 .login-button {
   margin-top: 8px;
-  background-color: #007bff;
+  background-color: #b67332;
   color: #fff;
   border: none;
   width: 60%;
@@ -84,5 +89,5 @@
   margin-top: 20px;
 }
 .login-button:hover {
-  background: #0a4385e5;
+  background: #b45e08;
 }
