--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,4 +1,6 @@
 body {
-  font-family: "Poppins", sans-serif;
   background: rgba(128, 128, 128, 0.295);
+}
+* {
+  font-family: "Inter", sans-serif;
 }
